# llm-vlm-fusion-port-inspection

./: README.md
uav_navigation/: README.md  package.xml  setup.cfg  setup.py
uav_navigation/launch/: uav_navigation.launch.py
uav_navigation/resource/: uav_navigation
uav_navigation/uav_navigation/: __init__.py  guidance_controller.py  pid_controller.py  uav_navigation_node.py  uav_odom_tf_broadcaster.py
vlm_inspection/: IMPLEMENTATION_SUMMARY.md  LAUNCH_FILES_GUIDE.md  README.md  SURVEILLANCE_README.md  package.xml  requirements.txt  setup.cfg  setup.py  setup.sh
vlm_inspection/assets/: README.md
vlm_inspection/config/: florence_config.yaml  qwen2_vl_config.yaml
vlm_inspection/examples/: blip2_usage_example.py  complete_usage_example.py  image_publisher.py  standalone_example.py  vlm_image_publisher.py
vlm_inspection/launch/: blip2_launch.py  blip2_surveillance_launch.py  dual_surveillance_launch.py  florence_launch.py  multi_vlm_surveillance_launch.py  nanovlm_surveillance_launch.py  paligamma_inspection_launch.py  phi35_vision_surveillance_launch.py  qwen2_vl_surveillance_launch.py  smolvlm_surveillance_launch.py  surveillance_launch.py  t5_launch.py  t5_surveillance_launch.py  triple_surveillance_launch.py  vlm_dual_launch.py
vlm_inspection/vlm_inspection/: __init__.py  blip2_node.py  blip2_service.py  blip2_surveillance_node.py  florence_node.py  florence_service.py  image_describer.py  nanovlm_service.py  nanovlm_surveillance_node.py  paligamma_inspection_node.py  paligamma_service.py  phi35_vision_service.py  phi35_vision_surveillance_node.py  (+8 more)
(+54 files in other folders)
