[metadata]
name = uav_navigation
version = 0.1.0
description = A ROS 2 package for quadrotor navigation using PID control and guidance algorithms.
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/uav_navigation
keywords = ROS2, UAV, Navigation, PID, Guidance

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    geometry_msgs
    numpy

[options.entry_points]
console_scripts =
    uav_navigation_node = uav_navigation.uav_navigation_node:main

[options.packages.find]
where = src

[develop]
script_dir=$base/lib/uav_navigation
[install]
install_scripts=$base/lib/uav_navigation